--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,23 +19,33 @@ android {
     dataBinding {
         enabled = true
     }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:support-v4:28.0.0-rc01'
+            force 'com.android.support:support-media-compat:28.0.0-rc01'
+            force 'com.android.support:customtabs:28.0.0-rc01'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     // JSON Parsing
-    implementation 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    implementation 'com.google.guava:guava:26.0-jre'
 }
