--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation 'org.mockito:mockito-core:1.10.19'
-    implementation 'com.google.guava:guava:26.0-jre'
+    implementation 'com.google.guava:guava:25.0-android'
 }
